Aggiornate configurazioni per deploy su Railway